--- a/jdbcRunner/pom.xml
+++ b/jdbcRunner/pom.xml
@@ -20,8 +20,16 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.1.0</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.bgee.log4jdbc-log4j2</groupId> <artifactId>log4jdbc-log4j2-jdbc4</artifactId> 
-			<version>1.16</version> </dependency> -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+		<!-- <dependency> 
+			<groupId>org.bgee.log4jdbc-log4j2</groupId> 
+			<artifactId>log4jdbc-log4j2-jdbc4</artifactId> 
+			<version>1.16</version> 
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
